<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/activity_bg"
    tools:context="com.example.android.quiz.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/white_bg"
        android:textStyle="bold"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint"
        android:background="@color/white_bg"
        android:padding="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:textColor="@color/white_bg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/play_button_text"
        android:onClick="startGame"/>

</LinearLayout>
