<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/activity_bg"
    tools:context="com.example.android.quiz.QuizActivity">

   <TextView
       android:id="@+id/questionNum"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/white_bg"
       android:textSize="18sp"
       android:layout_margin="20dp"
       android:textAlignment="textEnd"
       tools:text="0/10" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="36sp"
        android:fontFamily="@string/app_name"
        android:textStyle="bold|italic"
        android:textColor="@color/white_bg"
        tools:text="What is JS ?" />


    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/white_bg"
                android:onClick="radioButton1Click"
                android:paddingStart="15dp"
                android:textColor="@color/white_bg" />

            <RadioButton
                android:id="@+id/choice_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/white_bg"
                android:onClick="radioButton2Click"
                android:paddingStart="15dp"
                android:textColor="@color/white_bg" />

            <RadioButton
                android:id="@+id/choice_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/white_bg"
                android:onClick="radioButton3Click"
                android:paddingStart="15dp"
                android:textColor="@color/white_bg" />

            <RadioButton
                android:id="@+id/choice_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/white_bg"
                android:onClick="radioButton4Click"
                android:paddingStart="15dp"
                android:textColor="@color/white_bg" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white_bg"
                android:fontFamily="monospace"
                android:text="@string/submit_button_text"
                android:textSize="25sp"
                android:onClick="submitQuestion"/>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white_bg"
                android:fontFamily="monospace"
                android:text="@string/next_button_text"
                android:textSize="25sp"
                android:onClick="nextQuestion"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
